--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,20 +11,25 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.58.1",
+    "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.12",
     "@vitejs/plugin-react": "^5.1.1",
     "axios": "^1.13.2",
+    "canvas-confetti": "^1.9.3",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-resizable-panels": "^3.0.6",
     "react-router": "^7.10.1",
     "tailwindcss": "^4.1.18",
     "vite": "^7.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "daisyui": "^5.5.13",
