--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.58.1",
     "@monaco-editor/react": "^4.7.0",
+    "@stream-io/video-react-sdk": "^1.24.0",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.12",
     "@vitejs/plugin-react": "^5.1.1",
     "axios": "^1.13.2",
     "canvas-confetti": "^1.9.3",
+    "daisyui": "^5.5.13",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
@@ -25,9 +27,10 @@
     "react-resizable-panels": "^3.0.6",
     "react-router": "^7.10.1",
     "react-router-dom": "^7.11.0",
+    "stream-chat": "^9.24.0",
+    "stream-chat-react": "^13.9.0",
     "tailwindcss": "^4.1.18",
-    "vite": "^7.2.4",
-    "daisyui": "^5.5.13"
+    "vite": "^7.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
