--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "bugs": {
     "url": "https://github.com/Neeraj111010/Video-Calling-Interview-Platform/issues"
   },
-  "homepage": "https://github.com/Neeraj111010/Video-Calling-Interview-Platform#readme"
+  "homepage": "https://github.com/Neeraj111010/Video-Calling-Interview-Platform#readme",
+  "dependencies": {
+    "node-fetch": "^3.3.2"
+  }
 }
-
